// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InternalBuildError buildType is bundle 1`] = `
Array [
  "╭───────────────────────╮",
  "│ bundle failed:        │",
  "│  - format is \\"cjs\\"    │",
  "│  - target is \\"es2015\\" │",
  "╰───────────────────────╯",
  "
Detailed Information: ",
  "Error: this is error",
  "",
]
`;

exports[`InternalBuildError buildType is bundleless 1`] = `
Array [
  "╭───────────────────────╮",
  "│ bundleless failed:    │",
  "│  - format is \\"cjs\\"    │",
  "│  - target is \\"es2015\\" │",
  "╰───────────────────────╯",
  "
Detailed Information: ",
  "Error: this is error",
  "",
]
`;
